Support Wasm GC in dev server